Logseq auto save

--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -11,4 +11,4 @@ title: May 18th, 2021
 ##### You decide to watch this content
 ##### You open it in YouTube zettl
 ##### It easy
-##### Just opens as default
+##### Just opens as default (optional)
