Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -3,6 +3,7 @@ title: May 19th, 2021
 ---
 
 ## Open Twitter account
-### I'm thinking to keep up to date to
+### I'm thinking to keep up to date to #capture #thoughts
 #### roam accounts
 #### Ai accounts
+##
