Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -6,6 +6,6 @@ title: May 19th, 2021
 ### I'm thinking to keep up to date to #capture #thoughts
 #### roam accounts
 #### Ai accounts
-## Watch later
-### Roam
+## [[Watch later]]
+### Roam's founder goals #capture
 #### https://www.loom.com/share/53eb0b93b2444ef899c2c48a37317cd1
