Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -9,4 +9,7 @@ title: May 19th, 2021
 ## [[Watch later]]
 ### Roam's founder goals #capture
 #### https://www.loom.com/share/53eb0b93b2444ef899c2c48a37317cd1
-##
+## App stack
+###
+#### Air audio app - podcasts
+#### readwise -
