Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -10,6 +10,7 @@ title: May 19th, 2021
 ### Roam's founder goals #capture
 #### https://www.loom.com/share/53eb0b93b2444ef899c2c48a37317cd1
 ## App stack
-###
+### App stack #capture #thoughts
 #### Air audio app - podcasts
-#### readwise -
+#### readwise - digest
+####
