Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -13,4 +13,4 @@ title: May 19th, 2021
 ### App stack #capture #thoughts
 #### Air audio app - podcasts
 #### readwise - digest
-####
+#### roam research - networked thoughts
