Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -20,3 +20,6 @@ title: May 19th, 2021
 #### Air audio app - podcasts
 #### readwise - digest
 #### roam research - networked thoughts
+## Quran Zettl
+### Good roam implementation of quran studies #capture #[[app idea]]
+#### https://roamresearch.com/#/app/quran-graph/page/xLEID8Qzv
