--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -3,7 +3,7 @@ title: May 18th, 2021
 ---
 
 ## YouTube zettl app
-### Open yoitibe videos as feuture #capture #[[app idea]]
+### Open yoitibe videos in our app features #capture #[[app idea]]
 #### Allow people to open yoitibe links withon the note app
 #### It reduces friction
 #### Example worklflow
