Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -2,6 +2,8 @@
 title: May 19th, 2021
 ---
 
+## Don't forget
+###
 ## Open Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
 #### roam accounts
