--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -4,9 +4,9 @@ title: May 18th, 2021
 
 ## YouTube zettl app
 ### "Open YouTube link as" features #capture #[[app idea]]
-#### Allow people to open yoitibe links withon the note app
+#### Allow people to open youtube links within the note app
 #### It reduces friction
-#### Example worklflow
+#### Example workflow
 ##### Saved to watch later in idea storage - my mind
 ##### You decide to watch this content
 ##### You open it in YouTube zettl
