Logseq auto save

--- a/journals/2021_05_17.md
+++ b/journals/2021_05_17.md
@@ -5,7 +5,7 @@ title: May 17th, 2021
 ## Brand Styles
 ### Fun posts and technical posts #capture #[[insta brand]]
 #### My health growth brand is all fun and exciting
-##### Best representation - Pinkie pie personality... I know, I know. Don't judge me
+##### Best representation - Pinkie pie character
 ##### Inspirations
 ###### https://www.instagram.com/thechristosnikas/
 ###### https://www.instagram.com/vahursinga/
@@ -16,9 +16,7 @@ title: May 17th, 2021
 ###### Using content pipelines
 ####### zettl capture for content creation
 ####### letting go and giving time for ideas to marinate
-####### Using board for content pipeline
-####### stealing like an artist
-####### Filtering and purifying your content consumption
+#######
 ###### Content creation tricks -> Don't treat your content as art
 ####### Which is just a spin on ((60a28bae-02b1-4f51-a9eb-b015d5033115))
 ##### Inspirations
