Logseq auto save

--- a/journals/2021_05_17.md
+++ b/journals/2021_05_17.md
@@ -10,7 +10,7 @@ title: May 17th, 2021
 ###### https://www.instagram.com/thechristosnikas/
 ###### https://www.instagram.com/vahursinga/
 ###### https://www.instagram.com/dainwalker/
-#### My content creation brand is practical and straight to the point
+#### My content creation brand is practical and straight to the point #capture #[[insta brand]]
 ##### Best representation - Shu Omi the youtuber
 ##### I share how to make content creation easy and systematized
 ###### Using content pipelines
