--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -3,7 +3,8 @@ title: May 18th, 2021
 ---
 ## Okay I admit... roam's just better
 ### kanban for content pipeline #capture #[[insta brand]]
-### youtube
+### youtube timestamp plugin
+#### I was planning to create a clone with that feteur but why the hassle when It's already
 ##### "Open YouTube link as" features #capture #[[app idea]]
 ###### Allow people to open youtube links within the note app
 ###### It reduces friction
