--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -3,8 +3,10 @@ title: May 18th, 2021
 ---
 ## Okay I admit... roam's just better
 ### kanban for content pipeline #capture #[[insta brand]]
-### youtube timestamp plugin
-#### I was planning to create a clone with that feteur but why the hassle when It's already
+#### I can open kanban notes on sidebar
+### youtube timestamp plugin #capture #thoughts
+#### I was planning to create a clone with that feteur but why the hassle when It's already done for you... for free... sort of
+###
 ##### "Open YouTube link as" features #capture #[[app idea]]
 ###### Allow people to open youtube links within the note app
 ###### It reduces friction
