--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -4,9 +4,12 @@ title: May 18th, 2021
 ## Okay I admit... roam's just better
 ### kanban for content pipeline #capture #[[insta brand]]
 #### I can open kanban notes on sidebar
+https://twitter.com/calhistorian/status/1362893953914130433
+#### All in one place
 ### youtube timestamp plugin #capture #thoughts
 #### I was planning to create a clone with that feteur but why the hassle when It's already done for you... for free... sort of
-###
+### Logseq's tags are buggy... a nightmare
+### Athens isn't interested in
 ##### "Open YouTube link as" features #capture #[[app idea]]
 ###### Allow people to open youtube links within the note app
 ###### It reduces friction
