Logseq auto save

--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -9,7 +9,14 @@ https://twitter.com/calhistorian/status/1362893953914130433
 ### youtube timestamp plugin #capture #thoughts
 #### I was planning to create a clone with that feteur but why the hassle when It's already done for you... for free... sort of
 ### Logseq's tags are buggy... a nightmare
-### Athens isn't interested in
+### Athens isn't interested in all in one app... SAD
+#### My disappointment is immeasurable and my day is ruined
+### Cons of roam #capture #thoughts
+#### That price
+#### I'm earning enough for food with part time job
+#### I started my career on design
+#### but I'll need some time before I manage to earn something
+####
 ##### "Open YouTube link as" features #capture #[[app idea]]
 ###### Allow people to open youtube links within the note app
 ###### It reduces friction
