Logseq auto save

--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -12,11 +12,12 @@ https://twitter.com/calhistorian/status/1362893953914130433
 ### Athens isn't interested in all in one app... SAD
 #### My disappointment is immeasurable and my day is ruined
 ### Cons of roam #capture #thoughts
-#### That price
+#### That price...
 #### I'm earning enough for food with part time job
 #### I started my career on design
 #### but I'll need some time before I manage to earn something
-####
+#### Breakthrough #brainstorming
+##### They have a scolarship
 ##### "Open YouTube link as" features #capture #[[app idea]]
 ###### Allow people to open youtube links within the note app
 ###### It reduces friction
