--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -18,13 +18,13 @@ https://twitter.com/calhistorian/status/1362893953914130433
 #### but I'll need some time before I manage to earn something
 #### Breakthrough #brainstorming
 ##### They have a scolarship
-##### "Open YouTube link as" features #capture #[[app idea]]
-###### Allow people to open youtube links within the note app
-###### It reduces friction
-###### Example workflow
-####### Saved to watch later in idea storage - my mind
-####### You decide to watch this content
-####### You open it in YouTube zettl
-####### It easy
-####### Just opens as default (optional)
+## "Open YouTube link as" features #capture #[[app idea]]
+### Allow people to open youtube links within the note app
+### It reduces friction
+### Example workflow
+#### Saved to watch later in idea storage - my mind
+#### You decide to watch this content
+#### You open it in YouTube zettl
+#### It easy
+#### Just opens as default (optional)
 efault (optional)
