--- a/journals/2021_05_16.md
+++ b/journals/2021_05_16.md
@@ -16,4 +16,7 @@ title: May 16th, 2021
 #### Store bullets in arrays
 #### have nested arrays for nested bullets
 #### Use listview builder recursively to create nested widgets
-##
+## LATER [[May 19th, 2021]] 
+:PROPERTIES:
+:later: 1621407565862
+:END:
