--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -16,8 +16,12 @@ https://twitter.com/calhistorian/status/1362893953914130433
 #### I'm earning enough for food with part time job
 #### I started my career on design
 #### but I'll need some time before I manage to earn something
-#### Breakthrough #brainstorming
+#### What to do #brainstorming
 ##### They have a scolarship
+##### TODO [[May 19th, 2021]] apply to scholarship
+:PROPERTIES:
+:todo: 1621407605378
+:END:
 ## "Open YouTube link as" features #capture #[[app idea]]
 ### Allow people to open youtube links within the note app
 ### It reduces friction
