Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -2,8 +2,11 @@
 title: May 19th, 2021
 ---
 
-## Keeping it under 3 min
-###
+## Keeping it under 3 min - roam scholarship
+### #brainstorming
+####
+### Script
+####
 ## Open Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
 #### roam accounts
