--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -4,7 +4,8 @@ title: May 19th, 2021
 
 ## Keeping it under 3 min - roam scholarship
 ### #brainstorming
-####
+#### just started a career in insta brand
+#####
 ### Script
 ####
 ## Open Twitter account
