--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -5,7 +5,7 @@ title: May 19th, 2021
 ## Keeping it under 3 min - roam scholarship
 ### #brainstorming
 #### just started a career in insta brand
-#####
+##### I help
 ### Script
 ####
 ## Open Twitter account
