Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -6,7 +6,8 @@ title: May 19th, 2021
 ### #brainstorming
 #### just started a career in insta brand
 ##### I want to help health brands grow online
-#####
+##### Design as a side gig
+##### just recently made it as serious income
 ### Script
 ####
 ## Open Twitter account
