Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -8,6 +8,7 @@ title: May 19th, 2021
 ##### I want to help health brands grow online
 ##### Design as a side gig
 ##### just recently made it as serious income
+#### Build am ai assisted zettl app
 ### Script
 ####
 ## Open Twitter account
