Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -9,6 +9,7 @@ title: May 19th, 2021
 ##### Design as a side gig
 ##### just recently made it as serious income
 #### Build am ai assisted zettl app
+##### Flutter let's you easily add edge ai models
 ### Script
 ####
 ## Open Twitter account
