Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -15,6 +15,7 @@ title: May 19th, 2021
 #### Build am ai assisted zettl app
 ##### Flutter let's you easily add edge ai models
 ### Script
+#### Quick intro - name & age student (no more)
 ####
 ## Open Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
