Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -16,7 +16,7 @@ title: May 19th, 2021
 ##### Flutter let's you easily add edge ai models
 ### Script
 #### Quick intro - {{name}} & {{age}} student (no more)
-#### 3 things
+#### 3 problems to solve
 #####
 ## Open Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
