Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -14,9 +14,10 @@ title: May 19th, 2021
 ##### Share ways to grow online
 #### Build am ai assisted zettl app
 ##### Flutter let's you easily add edge ai models
-### Script
+### Final Script
 #### Quick intro - {{name}} & {{age}} student (no more)
-#### 3 problems to solve
+#### 3 problems I'm solve
+##### Help brands grow online with educational content
 #####
 ## Open Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
