--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -16,9 +16,11 @@ title: May 19th, 2021
 ##### Flutter let's you easily add edge ai models
 ### Final Script
 #### Quick intro - {{name}} & {{age}} student (no more)
-#### 3 problems I'm solve
+#### 3 problems I'm solving
 ##### Help brands grow online with educational content
-#####
+###### Fun introduction to though leader strategy
+###### In-depth look into content piepeline
+##### Build
 ## Open Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
 #### roam accounts
