--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -19,7 +19,7 @@ title: May 19th, 2021
 #### 3 problems I'm solving
 ##### Help brands grow online with educational content
 ###### Fun introduction to though leader strategy
-###### In-depth look into content piepeline
+###### In-depth look into content pipeline
 ##### Build ai assisted networked note app
 ## Open Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
