Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -21,7 +21,7 @@ title: May 19th, 2021
 ###### Fun introduction to though leader strategy
 ###### In-depth look into content pipeline
 ##### Build ai assisted networked note app.
-## Open Twitter account
+## Create a Twitter account
 ### I'm thinking to keep up to date to #capture #thoughts
 #### roam accounts
 ##### https://twitter.com/gideonesakoff
