Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -16,7 +16,7 @@ title: May 19th, 2021
 ##### Flutter let's you easily add edge ai models
 ### Final Script
 #### Quick intro - {{name}} & {{age}} student (no more)
-#### 3 problems I'm solving
+#### problems I'm solving
 ##### Help brands grow online with educational content
 ###### Fun introduction to though leader strategy
 ###### In-depth look into content pipeline
