--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -18,11 +18,11 @@ https://twitter.com/calhistorian/status/1362893953914130433
 #### but I'll need some time before I manage to earn something
 #### What to do #brainstorming
 ##### They have a scolarship
-##### LATER [[May 19th, 2021]] apply to scholarship
+##### DONE [[May 19th, 2021]] apply to scholarship
 :PROPERTIES:
 :todo: 1621407605378
-:done: 1621418531499
 :later: 1621418534886
+:done: 1621432867801
 :END:
 ## "Open YouTube link as" features #capture #[[app idea]]
 ### Allow people to open youtube links within the note app
