--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -43,3 +43,5 @@ title: May 19th, 2021
 ### Good roam implementation of quran studies #capture #[[app idea]]
 #### https://roamresearch.com/#/app/quran-public/page/LJzvk8EO4
 #### https://roamresearch.com/#/app/quran-graph/page/xLEID8Qzv
+## positive thinking
+### I've noticed that I
