--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -45,5 +45,6 @@ title: May 19th, 2021
 #### https://roamresearch.com/#/app/quran-graph/page/xLEID8Qzv
 ## positive thinking
 ### I've noticed that I am a bit more invlined towards negative thinking
-### expecting bad things
+#### expecting bad things
+#### 'planning' debates with other
 ###
