--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -47,4 +47,7 @@ title: May 19th, 2021
 ### I've noticed that I am a bit more invlined towards negative thinking
 #### expecting bad things
 #### 'planning' debates with other
-###
+### it's started as a means to protect myself from negative change
+### now It's more conditioned
+### I intend to change that
+#### think more positively
