--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -44,11 +44,12 @@ title: May 19th, 2021
 #### https://roamresearch.com/#/app/quran-public/page/LJzvk8EO4
 #### https://roamresearch.com/#/app/quran-graph/page/xLEID8Qzv
 ## positive thinking
-###
-### I've noticed that I am a bit more invlined towards negative thinking
-#### expecting bad things
-#### 'planning' debates with other
-### it's started as a means to protect myself from negative change
-### now It's more conditioned
-### I intend to change that
-#### think more positively
+### I've noticed something recently #capture #thoughts
+#### I am a bit more invlined towards negative thinking
+##### expecting bad things
+##### 'planning' debates with other
+#### it's started as a means to protect myself from negative change
+#### now It's more conditioned
+#### I intend to change that
+##### Be more inclined to think positively
+#####
