Logseq auto save

--- a/journals/2021_05_19.md
+++ b/journals/2021_05_19.md
@@ -52,4 +52,7 @@ title: May 19th, 2021
 #### now It's more conditioned
 #### I intend to change that
 ##### Be more inclined to think positively
-#####
+##### Not mind other people's actions
+##### Not mind other's opinions,
+###### especially during Ibada
+###### only between me and Allah
