Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -4,4 +4,4 @@ title: May 20th, 2021
 
 ## instagram carousel design
 ### What style I #capture #[[insta brand]]
-#### I want to use my original white
+#### I want to use my original white background but I don't know
