--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -4,4 +4,11 @@ title: May 20th, 2021
 
 ## instagram carousel design
 ### What style I #capture #[[insta brand]]
-#### I want to use my original white background but I don't know
+#### I want to use my original white background
+#### But with more nature inspired theme
+##### I focused too much on green
+##### what about
+###### ocean, mountains, sky, autumn,
+#### I'll pure apple style for zettl
+##### gotta get it out of my system
+######
