--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -9,6 +9,6 @@ title: May 20th, 2021
 ##### I focused too much on green
 ##### what about
 ###### ocean, mountains, sky, autumn,
-#### I'll pure apple style for zettl
+#### I'll use pure apple style for zettl brand
 ##### gotta get it out of my system
 ######
