Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -5,10 +5,10 @@ title: May 20th, 2021
 ## instagram carousel design
 ### What style I #capture #[[insta brand]]
 #### I want to use my original white background
-#### But with more nature inspired theme
-##### I focused too much on green
-##### what about
-###### ocean, mountains, sky, autumn,
+##### But with more nature inspired theme
+###### I focused too much on green
+###### what about
+####### ocean, mountains, sky, autumn,
 #### I'll use pure apple style for zettl brand
 ##### gotta get it out of my system
 ######
