--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -3,8 +3,7 @@ title: May 20th, 2021
 ---
 
 ## instagram carousel design
-### What style I #capture #[[insta brand]]
-#### I want to use my original white background
+### I want to use my original white background
 ##### But with more nature inspired theme
 ###### I focused too much on green
 ###### what about
