Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -3,11 +3,13 @@ title: May 20th, 2021
 ---
 
 ## instagram carousel design
-### I want to use my original white background
+### I want to use my original white background 
+#capture #[[insta brand]]
 ##### But with more nature inspired theme
 ###### I focused too much on green
 ###### what about
 ####### ocean, mountains, sky, autumn,
 #### I'll use pure apple style for zettl brand
+#capture #[[insta brand]]
 ##### gotta get it out of my system
 ######
