Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -9,7 +9,7 @@ title: May 20th, 2021
 ###### I focused too much on green
 ###### what about
 ####### ocean, mountains, sky, autumn,
-#### I'll use pure apple style for zettl brand
+### I'll use pure apple style for zettl brand
 #capture #[[insta brand]]
-##### gotta get it out of my system
-######
+#### gotta get it out of my system
+#####
