Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -9,7 +9,10 @@ title: May 20th, 2021
 ###### I focused too much on green
 ###### what about
 ####### ocean, mountains, sky, autumn,
-#######
+###### LATER I'll look into pinterest #inbox #capture in /
+:PROPERTIES:
+:later: 1621504728436
+:END:
 ### I'll use pure apple style for zettl brand
 #capture #[[insta brand]]
 #### gotta get my attachment to apple style out of my system
