Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -9,7 +9,7 @@ title: May 20th, 2021
 ###### I focused too much on green
 ###### what about
 ####### ocean, mountains, sky, autumn,
-###### LATER I'll look into pinterest #inbox #capture in /
+###### LATER I'll look into pinterest #inbox #capture in [[p/health brand growth instagram account]]
 :PROPERTIES:
 :later: 1621504728436
 :END:
