--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -6,10 +6,10 @@ title: May 20th, 2021
 ### I want to use my original white background 
 #capture #[[insta brand]]
 ##### But with more nature inspired theme
-###### I focused too much on green
-###### what about
-####### ocean, mountains, sky, autumn,
-###### LATER I'll look into pinterest #inbox #capture in [[p/health brand growth instagram account]]
+##### I focused too much on green
+##### what about
+##### ocean, mountains, sky, autumn,
+###### LATER I'll search those into pinterest #inbox #capture in [[p/health brand growth instagram account]]
 :PROPERTIES:
 :later: 1621504728436
 :END:
