Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -6,7 +6,7 @@ title: May 20th, 2021
 ### I want to use my original white background 
 #capture #[[insta brand]]
 ##### But with more nature inspired theme
-##### I focused too much on green
+###### I focused too much on green
 ##### what about
 ##### ocean, mountains, sky, autumn,
 ###### LATER I'll search those into pinterest #inbox #capture in [[p/health brand growth instagram account]]
