Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -7,13 +7,13 @@ title: May 20th, 2021
 #capture #[[insta brand]]
 ##### But with more nature inspired theme
 ###### I focused too much on green
-##### what about
-##### ocean, mountains, sky, autumn,
-###### LATER I'll search those into pinterest #inbox #capture in [[p/health brand growth instagram account]]
+###### what about
+###### ocean, mountains, sky, autumn,
+####### LATER I'll search those into pinterest #inbox #capture in [[p/health brand growth instagram account]]
 :PROPERTIES:
 :later: 1621504728436
 :END:
-#####
+##### MAIN Keywords -
 ### I'll use pure apple style for zettl brand
 #capture #[[insta brand]]
 #### gotta get my attachment to apple style out of my system
