Logseq auto save

--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -13,7 +13,7 @@ title: May 20th, 2021
 :PROPERTIES:
 :later: 1621504728436
 :END:
-##### MAIN Keywords -
+##### MAIN Keywords - Fun &
 ### I'll use pure apple style for zettl brand
 #capture #[[insta brand]]
 #### gotta get my attachment to apple style out of my system
