--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -14,6 +14,7 @@ title: May 20th, 2021
 :later: 1621504728436
 :END:
 ##### MAIN Keywords - Fun & Informative
+###### kurzgesagt
 ######
 ### I'll use pure apple style for zettl brand
 #capture #[[insta brand]]
