--- a/journals/2021_05_20.md
+++ b/journals/2021_05_20.md
@@ -16,6 +16,7 @@ title: May 20th, 2021
 ##### MAIN Keywords - Fun & Informative
 ###### kurzgesagt
 ##### Colors - flashy Blue, yellow, brown & green
+###### shine health
 ### I'll use pure apple style for zettl brand
 #capture #[[insta brand]]
 #### gotta get my attachment to apple style out of my system
